修改配置文件

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -8,6 +8,6 @@ hibernate.generate_statistics=false
 
 #update create-drop
 #配置自动创建表
-hibernate.hbm2ddl.auto=update
+#hibernate.hbm2ddl.auto=update
 
 hibernate.order_updates=true
