--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
       <artifactId>jxl</artifactId>
       <version>2.6.12</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>lrweb</finalName>
