--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>lrweb</finalName>
