拉取股票数据接口

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,14 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.5</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.lang -->
+    <dependency>
+      <groupId>org.apache.directory.studio</groupId>
+      <artifactId>org.apache.commons.lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>lrweb</finalName>
