--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
+    <hadoop.version>2.7.2</hadoop.version>
   </properties>
 
   <dependencies>
@@ -55,23 +56,23 @@
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
 
-<!--    <dependency>
+    <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
-      <version>2.7.2</version>
+      <version>${hadoop.version}</version>
 
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-hdfs</artifactId>
-      <version>2.7.2</version>
+      <version>${hadoop.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
-      <version>2.7.2</version>
-    </dependency>-->
+      <version>${hadoop.version}</version>
+    </dependency>
 
     <dependency>
         <groupId>com.mchange</groupId>
@@ -107,5 +108,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
